--- a/agents/splunk/deploymentclient.conf
+++ b/agents/splunk/deploymentclient.conf
@@ -1,7 +1,7 @@
 [deployment-client]
-disabled = false
+clientName = UF-HOSTNAME
 phoneHomeIntervalInSecs = 300
-clientName = UF-$(HOSTNAME)
+disabled = false
 
 [target-broker:deploymentServer]
 targetUri = your.deployment.server:8089
